test/parallel/forall/task-private-vars/const-errors.good
const-errors.chpl:3: error: illegal lvalue in assignment
const-errors.chpl:4: error: illegal lvalue in assignment
