test/parallel/forall/task-private-vars/const-errors.chpl

forall loc in Locales with (const cVar: int, const ref cRef = numLocales) {
  cVar = 5;
  cRef = 6;
}
